specialization page, start heder, footer, icon font

--- a/dev/chunks/footer.html
+++ b/dev/chunks/footer.html
@@ -1,7 +1,81 @@
 <footer id="footer" class="wrapper footer">
   <div class="container">
-    <p>
-      <a href="#">Ёудико молыжтйаы хаж ад.</a> Ютроквюы зючкёпит элыктрам зыд ед. Прё ед хабэо рыквюы эчжынт, вяш хабэо апэряря ат. Ат про модо коммодо ентырпрытаряш, прё рыквюы аликвюип пырикюлёз ат. Еюж эа прима вирйз ыёрмод, мэя мёнём мальюизчыт эю.
-    </p>
+    <div class="row">
+      <div class="col-sm-2">
+        <a href="#" class="logo-footer"><img src="images/logo-footer.svg" alt="logo"></a>
+        <ul class="social">
+          <li><a href="#"><i class="icon-facebook"></i></a></li>
+          <li><a href="#"><i class="icon-tw"></i></a></li>
+          <li><a href="#"><i class="icon-gplus"></i></a></li>
+          <li><a href="#"><i class="icon-youtube-play"></i></a></li>
+        </ul>
+      </div>
+      <div class="col-sm-10">
+        <div class="navigation-list">
+          <ul>
+            <li><span class="title">О проекте</span></li>
+            <li><a href="#">Бизнес-партнеры</a></li>
+            <li><a href="#">Университеты</a></li>
+            <li><a href="#">Корпоративное обучение</a></li>
+            <li><a href="#">Пользовательское соглашение</a></li>
+            <li><a href="#">Политика конфиденциальности</a></li>
+          </ul>
+          <ul>
+            <li><span class="title">Курсы</span></li>
+            <li><a href="#">Специализации</a></li>
+            <li><a href="#">Онлайн-магистратура</a></li>
+            <li><a href="#">Мини-курсы</a></li>
+            <li><a href="#">Дополнительное профессиональное образование (ДПО)</a></li>
+          </ul>
+          <ul>
+            <li><span class="title">Оплата</span></li>
+            <li><a href="#">Сертификаты</a></li>
+            <li><a href="#">Профессии</a></li>
+            <li><a href="#">Трудоустройство</a></li>
+            <li><a href="#">Зачет курса в вашем университете</a></li>
+          </ul>
+        </div>
+
+        <div class="programs">
+          <h3><span class="title">Избранные программы обучения  </span></h3>
+          <div class="item-programs">
+            <a href="#" class="name">
+              Lorem ipsum.
+            </a>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere, laudantium.</p>
+          </div>
+          <div class="item-programs">
+            <a href="#" class="name">
+              Lorem ipsum.
+            </a>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere, laudantium.</p>
+          </div>
+          <div class="item-programs">
+            <a href="#" class="name">
+              Lorem ipsum.
+            </a>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere, laudantium.</p>
+          </div>
+        </div>
+
+        <div class="contact">
+          <h3><span class="title">Контакты</span></h3>
+          <ul class="contact-link">
+            <li><a href="#"><i class="icon-mail"></i> Сообщить о проблеме</a></li>
+            <li><a href="#"> Часто задаваемые вопросы </a></li>
+            <li><a href="#">Корпоративным клиентам</a></li>
+          </ul>
+          <form action="#" class="search">
+            <input type="text" placeholder="Поиск">
+            <button><i class="icon-search-btn"></i></button>
+          </form>
+
+        </div>
+
+      </div>
+      <div class="col-sm-10 col-sm-offset-2">
+        <p class="copywriter">Open Profession 2016. <a href="#"><img src="images/g-store.png" alt="g-store"></a> <a href="#"><img src="images/a-store.png" alt="a-store"></a></p>
+      </div>
+    </div>
   </div>
 </footer>
