--- a/dev/chunks/header.html
+++ b/dev/chunks/header.html
@@ -1,7 +1,23 @@
 <header id="header" class="wrapper header">
   <div class="container">
-    <p>
-      <a href="#">Ёудико молыжтйаы хаж ад.</a> Ютроквюы зючкёпит элыктрам зыд ед. Прё ед хабэо рыквюы эчжынт, вяш хабэо апэряря ат. Ат про модо коммодо ентырпрытаряш, прё рыквюы аликвюип пырикюлёз ат. Еюж эа прима вирйз ыёрмод, мэя мёнём мальюизчыт эю.
-    </p>
+    <div class="row">
+      <div class="col-sm-3">
+        <a href="#" class="logo-site"><img src="images/logo.svg" alt="logo"></a>
+      </div>
+      <div class="col-sm-6">
+        <div class="wrap-search">
+          <div class="catalog-btn">
+            <a href="#" class="el-btn blue-style"><i class="icon-rectangle"></i> Каталог</a>
+          </div>
+          <form action="#" class="search">
+            <input type="text" >
+            <button><i class="icon-search-btn"></i></button>
+          </form>
+        </div>
+      </div>
+      <div class="col-sm-3">
+        <a href="#" class="el-btn blue-style inverse"><b>Вход /</b> Регистрация</a>
+      </div>
+    </div>
   </div>
 </header>
