--- a/dev/chunks/footer.html
+++ b/dev/chunks/footer.html
@@ -1,7 +1,7 @@
 <footer id="footer" class="wrapper footer">
   <div class="container">
     <div class="row">
-      <div class="col-sm-2">
+      <div class="col-sm-3 col-md-2">
         <a href="#" class="logo-footer"><img src="images/logo-footer.svg" alt="logo"></a>
         <ul class="social">
           <li><a href="#"><i class="icon-facebook"></i></a></li>
@@ -10,7 +10,7 @@
           <li><a href="#"><i class="icon-youtube-play"></i></a></li>
         </ul>
       </div>
-      <div class="col-sm-10">
+      <div class="col-sm-9 col-md-10">
         <div class="navigation-list">
           <ul>
             <li><span class="title">О проекте</span></li>
@@ -39,29 +39,20 @@
         <div class="programs">
           <h3><span class="title">Избранные программы обучения  </span></h3>
           <div class="item-programs">
-            <a href="#" class="name">
-              Lorem ipsum.
-            </a>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere, laudantium.</p>
+            <p><a href="#" class="name">Курс:</a> Grow to Greatness: Smart Growth for Private Businesses</p>
           </div>
           <div class="item-programs">
-            <a href="#" class="name">
-              Lorem ipsum.
-            </a>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere, laudantium.</p>
+            <p><a href="#" class="name">Специализация:</a> Grow to Greatness: Smart Growth for Private Businesses</p>
           </div>
           <div class="item-programs">
-            <a href="#" class="name">
-              Lorem ipsum.
-            </a>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere, laudantium.</p>
+            <p><a href="#" class="name">Мини-курсы:</a>Grow to Greatness: Smart Growth for Private Businesses</p>
           </div>
         </div>
 
         <div class="contact">
           <h3><span class="title">Контакты</span></h3>
           <ul class="contact-link">
-            <li><a href="#"><i class="icon-mail"></i> Сообщить о проблеме</a></li>
+            <li><a class="css-color" href="#"><i class="icon-mail"></i> <span>Сообщить о проблеме</span></a></li>
             <li><a href="#"> Часто задаваемые вопросы </a></li>
             <li><a href="#">Корпоративным клиентам</a></li>
           </ul>
@@ -73,7 +64,7 @@
         </div>
 
       </div>
-      <div class="col-sm-10 col-sm-offset-2">
+      <div class="col-sm-12">
         <p class="copywriter">Open Profession 2016. <a href="#"><img src="images/g-store.png" alt="g-store"></a> <a href="#"><img src="images/a-store.png" alt="a-store"></a></p>
       </div>
     </div>
