--- a/dev/chunks/head.html
+++ b/dev/chunks/head.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="no-js">
+<html class="no-js" lang="ru">
 <head>
   <meta charset="utf-8"/>
   <title>Title</title>
@@ -11,7 +11,7 @@
   <!--[if lte IE 9]><meta http-equiv="X-UA-Compatible" content="IE=edge"/><![endif]-->
 
   <!--
-    mobile define colors for elements of the browser -----------------------------------
+    mobile define colors for elements of the browser
 
     <meta name="theme-color" content="HEX_COLOR">
     <meta name="msapplication-navbutton-color" content="HEX_COLOR">
