--- a/dev/chunks/header.html
+++ b/dev/chunks/header.html
@@ -1,10 +1,10 @@
 <header id="header" class="wrapper header">
   <div class="container">
     <div class="row">
-      <div class="col-sm-3">
+      <div class="col-sm-3 col-md-3">
         <a href="#" class="logo-site"><img src="images/logo.svg" alt="logo"></a>
       </div>
-      <div class="col-sm-6">
+      <div class="col-sm-5 col-md-6">
         <div class="wrap-search">
           <div class="catalog-btn">
             <a href="#" class="el-btn blue-style"><i class="icon-rectangle"></i> Каталог</a>
@@ -15,8 +15,8 @@
           </form>
         </div>
       </div>
-      <div class="col-sm-3">
-        <a href="#" class="el-btn blue-style inverse"><b>Вход /</b> Регистрация</a>
+      <div class="col-sm-4 col-md-3 login-wrap-btn">
+        <a href="#" class="el-btn blue-style inverse">Вход / Регистрация</a>
       </div>
     </div>
   </div>
