design сhange home page

--- a/dev/chunks/footer.html
+++ b/dev/chunks/footer.html
@@ -4,16 +4,16 @@
       <div class="col-sm-3 col-md-2">
         <a href="#" class="logo-footer"><img src="images/logo-footer.svg" alt="logo"></a>
         <ul class="social">
-          <li><a href="#"><i class="icon-facebook"></i></a></li>
-          <li><a href="#"><i class="icon-tw"></i></a></li>
-          <li><a href="#"><i class="icon-gplus"></i></a></li>
-          <li><a href="#"><i class="icon-youtube-play"></i></a></li>
+          <li><a class="facebook" href="#"><i class="icon-facebook"></i></a></li>
+          <li><a class="tw" href="#"><i class="icon-tw"></i></a></li>
+          <li><a class="gplus" href="#"><i class="icon-gplus"></i></a></li>
+          <li><a class="youtube" href="#"><i class="icon-youtube-play"></i></a></li>
         </ul>
       </div>
       <div class="col-sm-9 col-md-10">
         <div class="navigation-list">
           <ul>
-            <li><span class="title">О проекте</span></li>
+            <li><a href="#" class="title">О проекте</a></li>
             <li><a href="#">Бизнес-партнеры</a></li>
             <li><a href="#">Университеты</a></li>
             <li><a href="#">Корпоративное обучение</a></li>
@@ -21,14 +21,14 @@
             <li><a href="#">Политика конфиденциальности</a></li>
           </ul>
           <ul>
-            <li><span class="title">Курсы</span></li>
+            <li><a href="#" class="title">Курсы</a></li>
             <li><a href="#">Специализации</a></li>
             <li><a href="#">Онлайн-магистратура</a></li>
             <li><a href="#">Мини-курсы</a></li>
             <li><a href="#">Дополнительное профессиональное образование (ДПО)</a></li>
           </ul>
           <ul>
-            <li><span class="title">Оплата</span></li>
+            <li><a href="#" class="title">Оплата</a></li>
             <li><a href="#">Сертификаты</a></li>
             <li><a href="#">Профессии</a></li>
             <li><a href="#">Трудоустройство</a></li>
@@ -37,22 +37,22 @@
         </div>
 
         <div class="programs">
-          <h3><span class="title">Избранные программы обучения  </span></h3>
+          <h3><a href="#" class="title">Избранные программы обучения  </a></h3>
           <div class="item-programs">
-            <p><a href="#" class="name">Курс:</a> Grow to Greatness: Smart Growth for Private Businesses</p>
+            <p><span class="name">Курс:</span> <a href="#">Grow to Greatness: Smart Growth for Private Businesses</a></p>
           </div>
           <div class="item-programs">
-            <p><a href="#" class="name">Специализация:</a> Grow to Greatness: Smart Growth for Private Businesses</p>
+            <p><span class="name">Специализация:</span> <a href="#">Grow to Greatness: Smart Growth for Private Businesses</a></p>
           </div>
           <div class="item-programs">
-            <p><a href="#" class="name">Мини-курсы:</a>Grow to Greatness: Smart Growth for Private Businesses</p>
+            <p><span class="name">Мини-курсы:</span><a href="#"> Grow to Greatness: Smart Growth for Private Businesses</a></p>
           </div>
         </div>
 
         <div class="contact">
-          <h3><span class="title">Контакты</span></h3>
+          <h3><a href="#" class="title">Контакты</a></h3>
           <ul class="contact-link">
-            <li><a class="css-color" href="#"><i class="icon-mail"></i> <span>Сообщить о проблеме</span></a></li>
+            <li><a class="css-color" href="#"><img src="images/icons/mail.svg" alt=""> <span>Сообщить о проблеме</span></a></li>
             <li><a href="#"> Часто задаваемые вопросы </a></li>
             <li><a href="#">Корпоративным клиентам</a></li>
           </ul>
