--- a/dev/chunks/header.html
+++ b/dev/chunks/header.html
@@ -7,7 +7,7 @@
       <div class="col-sm-5 col-md-6">
         <div class="wrap-search">
           <div class="catalog-btn">
-            <a href="#" class="el-btn blue-style"><i class="icon-rectangle"></i> Каталог</a>
+            <a href="#" class="el-btn blue-style">Каталог</a>
           </div>
           <form action="#" class="search">
             <input type="text" >
