--- a/dev/chunks/modal-window.html
+++ b/dev/chunks/modal-window.html
@@ -1,33 +1,79 @@
 <!-- Begin Modal sign Up -->
-<div class="remodal sign-up" data-remodal-id="sign-up">
+<div class="remodal sign-up" data-remodal-id="sign-in">
   <button data-remodal-action="close" class="remodal-close"></button>
-  <div class="sign-up-header">
-    Войти
-    Зарегистрироваться
-    <div class="">Войти через</div>
-    <ul>
-      <li><a href="#">ddddd</a></li>
-      <li><a href="#">ddddd</a></li>
-      <li><a href="#">ddddd</a></li>
-      <li><a href="#">ddddd</a></li>
-      <li><a href="#">НПОО</a></li>
+  <div class="up-header">
+    <a href="#" class="sign-in-btn js-show show">Войти</a>
+    <a href="#sign-up" class="sign-up-btn">Зарегистрироваться</a>
+    <div class="in-for">Войти через</div>
+    <ul class="sign-social">
+      <li><a href="#" class="social-fb"><i class="icon-facebook"></i></a></li>
+      <li><a href="#" class="social-gpus"><i class="icon-gplus"></i></a></li>
+      <li><a href="#" class="social-vk"><i class="icon-vkontakte"></i></a></li>
+      <li><a href="#" class="social-tw"><i class="icon-tw"></i></a></li>
+      <li><a href="#" class="text-social">НПОО</a></li>
     </ul>
     <div class="in-for">или</div>
 
-    <label for="up-email">Email</label>
-    <input type="email" id="up-email" placeholder="Ваш email"/>
-    <label for="up-pass">Пароль</label>
-    <input type="password" id="up-pass" />
-    <a href="#" class="el-btn">Войти</a>
-    <a href="#">Забыли пароль?</a>
+    <!-- Begin Sign In content -->
+    <div class="sign-in-content">
+      <form action="/" method="post">
+        <label for="in-email">Email</label>
+        <div class="form-input">
+          <input type="email" id="in-email" placeholder="Ваш email"/>
+        </div>
+        <label for="in-pass">Пароль</label>
+        <div class="form-input">
+          <input type="password" id="in-pass" />
+        </div>
+        <div class="form-buttons">
+          <button type="submit" class="el-btn blue-style">Войти</button>
+          <a href="#" data-remodal-action="close" class="forgot-pass-link mod-gray">Забыли пароль?</a>
+        </div>
+      </form>
+    </div>
+    <!-- End Sign In content -->
 
-    <label for="in-email">Email</label>
-    <input type="email" id="in-email" placeholder="Ваш email"/>
-    <label for="name">Имя</label>
-    <input type="text" id="name" placeholder="Ваше имя"/>
-    <label for="in-pass">Пароль</label>
-    <input type="password" id="in-pass" />
-    <a href="#" class="el-btn">Зарегистрироваться</a>
+  </div>
+</div>
+<!-- End Modal sign Up -->
+
+<!-- Begin Modal sign In -->
+<div class="remodal sign-up" data-remodal-id="sign-up">
+  <button data-remodal-action="close" class="remodal-close"></button>
+  <div class="up-header">
+    <a href="#" class="sign-up-btn js-show show">Зарегистрироваться</a>
+    <a href="#sign-in" class="sign-in-btn">Войти</a>
+    <div class="in-for">Войти через</div>
+    <ul class="sign-social">
+      <li><a href="#" class="social-fb"><i class="icon-facebook"></i></a></li>
+      <li><a href="#" class="social-gpus"><i class="icon-gplus"></i></a></li>
+      <li><a href="#" class="social-vk"><i class="icon-vkontakte"></i></a></li>
+      <li><a href="#" class="social-tw"><i class="icon-tw"></i></a></li>
+      <li><a href="#" class="text-social">НПОО</a></li>
+    </ul>
+    <div class="in-for">или</div>
+
+    <!-- Begin Sign Up content -->
+    <div class="sign-up-content">
+      <form action="/" method="post" name="sign-up" class="sign-up-form">
+        <label for="up-email">Email<span>*</span></label>
+        <div class="form-input">
+          <input name="email" type="email" id="up-email" placeholder="Ваш email"/>
+        </div>
+        <label for="name">Имя</label>
+        <div class="form-input">
+          <input name="name" type="text" id="name" placeholder="Ваше имя"/>
+        </div>
+        <label for="up-pass">Пароль<span>*</span></label>
+        <div class="form-input">
+          <input name="password" type="password" id="up-pass" />
+        </div>
+        <div class="form-buttons">
+          <button type="submit" class="el-btn blue-style">Зарегистрироваться</button>
+        </div>
+      </form>
+    </div>
+    <!-- End Sign Up content -->
 
   </div>
 </div>
@@ -37,7 +83,7 @@
 <div class="remodal sign-thx" data-remodal-id="sign-thx">
   <button data-remodal-action="close" class="remodal-close"></button>
   <div class="sign-thx-content">
-    <div class="sign-thx-title">Спасибо за регистрацию!</div>
+    <div class="sign-thx-title modal-title">Спасибо за регистрацию!</div>
     <p class="sign-thx-desc">Вам на почту отправлено письмо. Для активации аккаунта, пожалуйста,
       перейдите по ссылке в письме.</p>
     <p class="sign-thx-desc mod-small">Не получали письма? Проверьте папку "Спам". Если прошло 5 минут, а письма еще нет -
@@ -50,9 +96,14 @@
 <div class="remodal forgot-pass" data-remodal-id="forgot-pass">
   <button data-remodal-action="close" class="remodal-close"></button>
   <div class="forgot-pass-content">
-    Введите Email или имя пользователя
-    Восстановить пароль
-    Я вспомнил пароль
+    <div class="forgot-pass-title modal-title">Введите Email или имя пользователя</div>
+    <form action="/" method="post">
+      <div class="form-input">
+        <input type="email" placeholder="Введите Email или Имя" />
+      </div>
+      <button type="submit" class="el-btn blue-style">Восстановить пароль</button>
+      <a href="#" data-remodal-action="close" class="forgot-pass-link mod-gray">Я вспомнил пароль</a>
+    </form>
   </div>
 </div>
 <!-- End Modal forgot password -->
@@ -61,7 +112,7 @@
 <div class="remodal forgot-thx" data-remodal-id="forgot-thx">
   <button data-remodal-action="close" class="remodal-close"></button>
   <div class="forgot-thx-content">
-    <div class="forgot-thx-title">Инструкция по восстановлению пароля отправлена на e-mail, указанный при регистрации</div>
+    <div class="modal-title">Инструкция по восстановлению пароля отправлена на e-mail, указанный при регистрации</div>
     <a href="#" class="forgot-thx-link mod-gray">К выбору курсов</a>
   </div>
 </div>
@@ -71,9 +122,18 @@
 <div class="remodal promo-code" data-remodal-id="promo-code">
   <button data-remodal-action="close" class="remodal-close"></button>
   <div class="promo-code-content">
-    У Вас есть промо-код?
-    Ввести
-    Пока нет
+    <div class="modal-title">У Вас есть промо-код?</div>
+    <div class="promo-step-1">
+      <a href="#" class="el-btn blue-style js-promo-step">Есть</a>
+      <button data-remodal-action="close" class="el-btn grey-style">Пока нет</button>
+    </div>
+    <form action="/" method="post" class="promo-step-2">
+      <div class="form-input">
+        <input type="text" placeholder="Промо-код" />
+      </div>
+      <button type="submit" class="el-btn blue-style">Ввести</button>
+      <button data-remodal-action="close" class="el-btn grey-style">Пока нет</button>
+    </form>
   </div>
 </div>
 <!-- End Modal promo-code -->
