update icon font

--- a/dev/chunks/header.html
+++ b/dev/chunks/header.html
@@ -17,6 +17,13 @@
       </div>
       <div class="col-sm-4 col-md-3 login-wrap-btn">
         <a href="#" class="el-btn blue-style inverse">Вход / Регистрация</a>
+
+        <a class="user-page-link" href="personal.html">
+          <span class="img-wrap">
+            <img src="images/person-1.png" alt="person">
+          </span>
+          Личный кабинет <i class="icon-angle-down"></i>
+        </a>
       </div>
     </div>
   </div>
