--- a/personal.html
+++ b/personal.html
@@ -54,6 +54,13 @@
       </div>
       <div class="col-sm-4 col-md-3 login-wrap-btn">
         <a href="#" class="el-btn blue-style inverse">Вход / Регистрация</a>
+
+        <a class="user-page-link" href="personal.html">
+          <span class="img-wrap">
+            <img src="images/person-1.png" alt="person">
+          </span>
+          Личный кабинет <i class="icon-angle-down"></i>
+        </a>
       </div>
     </div>
   </div>
@@ -388,7 +395,7 @@
                                 </div>
 
                                 <div class="row">
-                                    <div class="col-sm-6">
+                                    <div class="col-sm-8 col-md-6">
                                         <div class="border-block">
                                             <div class="text-wrap">
                                                 <div class="title">Product Designer</div>
@@ -400,7 +407,7 @@
                                             <a href="#" class="el-btn blue-style">Мое резюме</a>
                                         </div>
                                     </div>
-                                    <div class="col-sm-6">
+                                    <div class="col-sm-8 col-md-6">
                                         <div class="border-block css-pur">
                                             <div class="text-wrap">
                                                 <div class="title">Product Manager</div>
@@ -426,12 +433,12 @@
                                             </span>
                                         </span>
                                     </div>
-                                    <div class="col-xs-8">
+                                    <div class="col-sm-8">
                                         <p class="style-text-5">До завершения текущей траектории осталось 7 месяцев.
                                             Она включает 5 курсов и 1 специализацию.
                                         </p>
                                     </div>
-                                    <div class="col-xs-4">
+                                    <div class="col-sm-4">
                                         <p class="style-text-5">Вы уже прошли 5 курсов.
                                             <a href="#">Показать все</a></p>
 
@@ -509,7 +516,7 @@
                                     </div>
                                 </div>
                                 <div class="row">
-                                    <div class="col-sm-6">
+                                    <div class="col-sm-8 col-md-6">
                                         <div class="border-block">
                                             <div class="text-wrap">
                                                 <div class="title">Junior Data Analyst</div>
@@ -657,12 +664,12 @@
                                             </span>
                                         </span>
                                     </div>
-                                    <div class="col-xs-8">
+                                    <div class="col-sm-8">
                                         <p class="style-text-5">До завершения текущей траектории осталось 7 месяцев.
                                             Она включает 5 курсов и 1 специализацию.
                                         </p>
                                     </div>
-                                    <div class="col-xs-4">
+                                    <div class="col-sm-4">
                                         <p class="style-text-5">Вы уже прошли 5 курсов.
                                             <a href="#">Показать все</a></p>
 
@@ -780,7 +787,7 @@
                                     </div>
                                 </div>
                                 <div class="row">
-                                    <div class="col-sm-6">
+                                    <div class="col-sm-8 col-md-6">
                                         <div class="border-block">
                                             <div class="text-wrap">
                                                 <div class="title">Junior Data Analyst</div>
