--- a/dev/chunks/modal-window.html
+++ b/dev/chunks/modal-window.html
@@ -26,7 +26,7 @@
           <input type="password" id="in-pass" />
         </div>
         <div class="form-buttons">
-          <button type="submit" class="el-btn blue-style">Войти</button>
+          <button type="submit" class="el-btn pur-style">Войти</button>
           <a href="#" data-remodal-action="close" class="forgot-pass-link mod-gray">Забыли пароль?</a>
         </div>
       </form>
@@ -65,11 +65,12 @@
           <input name="name" type="text" id="name" placeholder="Ваше имя"/>
         </div>
         <label for="up-pass">Пароль<span>*</span></label>
-        <div class="form-input">
+        <div class="form-input mod-pass">
+          <a href="#" class="js-pass icon-pass icon-glas-icon"></a>
           <input name="password" type="password" id="up-pass" />
         </div>
         <div class="form-buttons">
-          <button type="submit" class="el-btn blue-style">Зарегистрироваться</button>
+          <button type="submit" class="el-btn pur-style">Зарегистрироваться</button>
         </div>
       </form>
     </div>
@@ -101,7 +102,7 @@
       <div class="form-input">
         <input type="email" placeholder="Введите Email или Имя" />
       </div>
-      <button type="submit" class="el-btn blue-style">Восстановить пароль</button>
+      <button type="submit" class="el-btn pur-style">Восстановить пароль</button>
       <a href="#" data-remodal-action="close" class="forgot-pass-link mod-gray">Я вспомнил пароль</a>
     </form>
   </div>
@@ -124,14 +125,14 @@
   <div class="promo-code-content">
     <div class="modal-title">У Вас есть промо-код?</div>
     <div class="promo-step-1">
-      <a href="#" class="el-btn blue-style js-promo-step">Есть</a>
+      <a href="#" class="el-btn pur-style js-promo-step">Есть</a>
       <button data-remodal-action="close" class="el-btn grey-style">Пока нет</button>
     </div>
     <form action="/" method="post" class="promo-step-2">
       <div class="form-input">
         <input type="text" placeholder="Промо-код" />
       </div>
-      <button type="submit" class="el-btn blue-style">Ввести</button>
+      <button type="submit" class="el-btn pur-style">Ввести</button>
       <button data-remodal-action="close" class="el-btn grey-style">Пока нет</button>
     </form>
   </div>
