modal window and page this modal

--- a/dev/chunks/modal-window.html
+++ b/dev/chunks/modal-window.html
@@ -1,5 +1,5 @@
 <!-- Begin Modal sign Up -->
-<div class="remodal sign-up" data-remodal-id="sign-in">
+<div class="remodal sign-content" data-remodal-id="sign-in">
   <button data-remodal-action="close" class="remodal-close"></button>
   <div class="up-header">
     <a href="#" class="sign-in-btn js-show show">Войти</a>
@@ -38,7 +38,7 @@
 <!-- End Modal sign Up -->
 
 <!-- Begin Modal sign In -->
-<div class="remodal sign-up" data-remodal-id="sign-up">
+<div class="remodal sign-content" data-remodal-id="sign-up">
   <button data-remodal-action="close" class="remodal-close"></button>
   <div class="up-header">
     <a href="#" class="sign-up-btn js-show show">Зарегистрироваться</a>
