--- a/courses10.html
+++ b/courses10.html
@@ -5,7 +5,7 @@
   <title>Title</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,600&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" href="css/style.css?timestamp=1472825642974"/>
+  <link rel="stylesheet" href="css/style.css?timestamp=1472829010946"/>
   <script src="js/ie-detector.js"></script>
   <script src="js/modernizr.js"></script>
   <!--[if lte IE 9]><meta http-equiv="X-UA-Compatible" content="IE=edge"/><![endif]-->
@@ -419,9 +419,13 @@
                                                         </span>
                                                     </li>
                                                 </ul>
-                                                <div class="get-mail">
-                                                    <input type="checkbox" name="subscribe" id="sub1" checked>
-                                                    <label for="sub1"><span class="el-black-txt">Получать рассылку</span></label>
+                                                <div class="pick-schedule-content-bottom">
+                                                    <div class="styled-cb">
+                                                        <input type="checkbox" id="cb-uslov" checked>
+                                                        <label for="cb-uslov">
+                                                            Получать рассылку
+                                                        </label>
+                                                    </div>
                                                 </div>
                                             </div>
                                         </div>
@@ -430,7 +434,7 @@
                                 <!-- End specialization section -->
 
                                 <!-- Begin course  section -->
-                                <section class="css-shadow skill-columns hidden-columns">
+                                <section class="css-shadow skill-columns">
                                     <div class="row course-block">
                                         <div class="col-md-3 col-lg-2 col-xs-3 text-center">
                                             <div class="img"><img src="images/courses/img-2.jpg" alt=""></div>
@@ -498,7 +502,7 @@
                                 <!-- End course  section -->
 
                                 <!-- Begin course section -->
-                                <section class="css-shadow skill-columns hidden-columns">
+                                <section class="css-shadow skill-columns">
                                     <div class="row course-block">
                                         <div class="col-md-3 col-lg-2 col-xs-3 text-center">
                                             <div class="img"><img src="images/courses/img-2.jpg" alt=""></div>
@@ -676,9 +680,13 @@
                                                         </span>
                                                     </li>
                                                 </ul>
-                                                <div class="get-mail">
-                                                    <input type="checkbox" name="subscribe" id="sub2" checked>
-                                                    <label for="sub2"><span class="el-black-txt">Получать рассылку</span></label>
+                                                <div class="pick-schedule-content-bottom">
+                                                    <div class="styled-cb">
+                                                        <input type="checkbox" id="cb-uslov1" checked>
+                                                        <label for="cb-uslov1">
+                                                            Получать рассылку
+                                                        </label>
+                                                    </div>
                                                 </div>
                                             </div>
                                         </div>
@@ -750,7 +758,7 @@
                             <!-- End group courses -->
 
                             <!-- Begin course section -->
-                            <section class="css-shadow skill-columns hidden-columns">
+                            <section class="css-shadow skill-columns">
                                 <div class="row course-block">
                                     <div class="col-md-3 col-lg-2 col-xs-3 text-center">
                                         <div class="img"><img src="images/courses/img-3.jpg" alt=""></div>
@@ -823,7 +831,7 @@
 
                             <!-- Begin course section -->
                             <div class="title-section">Другие курсы</div>
-                            <section class="css-shadow skill-columns hidden-columns">
+                            <section class="css-shadow skill-columns">
                                 <div class="row course-block">
                                     <div class="col-md-3 col-lg-2 col-xs-3 text-center">
                                         <div class="img"><img src="images/courses/img-3.jpg" alt=""></div>
@@ -883,7 +891,67 @@
                             </section>
                             <!-- End course section -->
 
+                            <!-- Begin course section -->
+                            <section class="css-shadow skill-columns">
+                                <div class="row course-block">
+                                    <div class="col-md-3 col-lg-2 col-xs-3 text-center">
+                                        <div class="img"><img src="images/courses/img-3.jpg" alt=""></div>
+                                        <a href="#" class="partner-logo"><img src="images/courses/logo-3.png" alt=""></a>
+                                    </div>
+                                    <div class="col-md-9 col-lg-10">
+                                        <div class="inform-block">
+                                            <div class="course-desc">
+                                                <div class="title-name">
+                                                    Курс <a href="#">Beyond Silicon Valley: Growing Entrepreneurship in Transitioning Economies</a>
+                                                </div>
+                                                <div class="course-process">
+                                                    <span class="black-txt">с 16 сентября</span>
+                                                </div>
+<fieldset action="#" class="rating">
+    <span>Оставьте отзыв</span>
+    <div class="stars">
+        <input type="radio" id="star5" name="rating" value="5" />
+        <label class ="full" for="star5"></label>
+        <input type="radio" id="star4half" name="rating" value="4 and a half" />
+        <label class="half" for="star4half"></label>
+        <input type="radio" id="star4" name="rating" value="4" />
+        <label class="full" for="star4"></label>
+        <input type="radio" id="star3half" name="rating" value="3 and a half" />
+        <label class="half" for="star3half"></label>
+        <input type="radio" id="star3" name="rating" value="3" />
+        <label class="full" for="star3"></label>
+        <input type="radio" id="star2half" name="rating" value="2 and a half" checked />
+        <label class="half" for="star2half"></label>
+        <input type="radio" id="star2" name="rating" value="2" />
+        <label class="full" for="star2"></label>
+        <input type="radio" id="star1half" name="rating" value="1 and a half" />
+        <label class="half" for="star1half"></label>
+        <input type="radio" id="star1" name="rating" value="1" />
+        <label class="full" for="star1"></label>
+        <input type="radio" id="starhalf" name="rating" value="half" />
+        <label class="half" for="starhalf"></label>
+    </div>
+</fieldset>
+                                            </div>
 
+                                            <div class="share-info">
+                                                <div class="visibility-block">
+                                                    <button class="btn-white">Продолжить обучение</button>
+                                                    <button class="btn-blue">Получить сертификат</button>
+                                                    <button class="js-show-block btn-arrow"></button>
+                                                </div>
+                                                <div class="hidden-block">
+                                                    <a class="btn-white" href="#">Поменять сессию</a>
+                                                    <a class="btn-white" href="#">К странице курса</a>
+                                                    <a class="btn-white btn-unsubscribe" href="#">Отписаться</a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                </div>
+                            </section>
+                            <!-- End course section -->
 
                         </div>
                         <!-- End content -->
@@ -975,7 +1043,7 @@
 <!-- scripts -->
 <script src="js/libs.js"></script>
 <script src="js/core.js"></script>
-<script src="js/common.js?timestamp=1472825642974"></script>
+<script src="js/common.js?timestamp=1472829010946"></script>
 <script src="//localhost:35729/livereload.js"></script>
 </body>
 </html>
