--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Title</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,600&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" href="css/style.css?timestamp=1472805463838"/>
+  <link rel="stylesheet" href="css/style.css?timestamp=1472826460411"/>
   <script src="js/ie-detector.js"></script>
   <script src="js/modernizr.js"></script>
   <!--[if lte IE 9]><meta http-equiv="X-UA-Compatible" content="IE=edge"/><![endif]-->
@@ -138,18 +138,21 @@
                     <div class="el-check-group mod-horizontal">
                       <div class="el-btn mod-check mod-icon">
                         <input type="checkbox" name="check-specialization" id="check-specialization" value="specialization">
-                        <label for="check-specialization">Специализация</label>
+                        <label for="check-specialization"><span class="name">Специализация</span></label>
                       </div>
                       <div class="el-btn mod-check mod-icon">
                         <input type="checkbox" name="check-courses" id="check-courses" value="courses">
-                        <label for="check-courses">Курсы</label>
+                        <label for="check-courses"><span class="name">Курсы</span></label>
                       </div>
                     </div>
                   </div>
                   <div class="col-md-4 col-sm-6">
                     <div class="el-btn mod-check">
                       <input type="checkbox" name="check-startOnWeek" id="check-startOnWeek" value="startOnWeek">
-                      <label for="check-startOnWeek">Курсы</label>
+                      <label for="check-startOnWeek">
+                        <span class="name">Начать в течении недели</span>
+                        <span class="res-count">52</span>
+                      </label>
                     </div>
                   </div>
                   <div class="col-md-4 col-sm-6">
@@ -161,22 +164,22 @@
                       <div class="el-btn mod-check">
                         <input type="checkbox" name="check-duration" id="check-duration-small" value="duration-small">
                         <label for="check-duration-small">
-                          До месяца
-                          <span>15</span>
+                          <span class="name">До месяца</span>
+                          <span class="res-count">15</span>
                         </label>
                       </div>
                       <div class="el-btn mod-check">
                         <input type="checkbox" name="check-courses" id="check-duration-middle" value="duration-middle">
                         <label for="check-duration-middle">
-                          1-3 месяца
-                          <span>23</span>
+                          <span class="name">1-3 месяца</span>
+                          <span class="res-count">23</span>
                         </label>
                       </div>
                       <div class="el-btn mod-check">
                         <input type="checkbox" name="check-courses" id="check-duration-large" value="duration-large">
                         <label for="check-duration-large">
-                          Больше 3 месяцев
-                          <span>11</span>
+                          <span class="name">Больше 3 месяцев</span>
+                          <span class="res-count">11</span>
                         </label>
                       </div>
                     </div>
@@ -256,22 +259,22 @@
                       <div class="el-btn mod-check">
                         <input type="checkbox" name="check-elementary" id="check-elementary" value="elementary">
                         <label for="check-elementary">
-                          Начальный
-                          <span>15</span>
+                          <span class="name">Начальный</span>
+                          <span class="res-count">15</span>
                         </label>
                       </div>
                       <div class="el-btn mod-check">
                         <input type="checkbox" name="check-average" id="check-average" value="average">
                         <label for="check-average">
-                          Средний
-                          <span>23</span>
+                          <span class="name">Средний</span>
+                          <span class="res-count">23</span>
                         </label>
                       </div>
                       <div class="el-btn mod-check">
                         <input type="checkbox" name="check-advanced" id="check-advanced" value="advanced">
                         <label for="check-advanced">
-                          Продвинутый
-                          <span>11</span>
+                          <span class="name">Продвинутый</span>
+                          <span class="res-count">11</span>
                         </label>
                       </div>
                     </div>
@@ -280,15 +283,15 @@
                     <div class="el-btn mod-check pos-top">
                       <input type="checkbox" name="check-certified" id="check-certified" value="certified">
                       <label for="check-certified">
-                        Сертифицированы
-                        <span>11</span>
+                        <span class="name">Сертифицированы</span>
+                        <span class="res-count">11</span>
                       </label>
                     </div>
                     <div class="el-btn mod-check pos-bottom">
                       <input type="checkbox" name="check-approved-experts" id="check-approved-experts" value="approved-experts">
                       <label for="check-approved-experts">
-                        Одобрено экспертами
-                        <span>11</span>
+                        <span class="name">Одобрено экспертами</span>
+                        <span class="res-count">11</span>
                       </label>
                     </div>
                   </div>
@@ -296,13 +299,13 @@
                     <div class="el-btn mod-check pos-top">
                       <input type="checkbox" name="check-new-courses" id="check-new-courses" value="new-courses">
                       <label for="check-new-courses">
-                        Новые
-                        <span>11</span>
+                        <span class="name">Новые</span>
+                        <span class="res-count">11</span>
                       </label>
                     </div>
                   </div>
                 </div>
-                <div class="col-sm-12">
+                <div class="col-sm-12 btn-bottom-group">
                   <button class="el-btn pur-style" type="button">Показать 14 специализаций</button>
                   <button class="el-btn grey-light-style" type="button">Сбросить</button>
                 </div>
@@ -877,7 +880,7 @@
 <!-- scripts -->
 <script src="js/libs.js"></script>
 <script src="js/core.js"></script>
-<script src="js/common.js?timestamp=1472805463838"></script>
+<script src="js/common.js?timestamp=1472826460411"></script>
 <script src="//localhost:35729/livereload.js"></script>
 </body>
 </html>
