--- a/404.html
+++ b/404.html
@@ -66,81 +66,49 @@
 </header>
 
 
-    <div id="page-body" class="page-body page-contacts">
+    <div id="page-body" class="page-body not-found-page">
+        <div class="page-content">
 
-        <section class="container">
-            <div class="title-section row">
-                <h2 class="col-sm-12">Контакты</h2>
-            </div>
-            <div class="row">
-                <div class="col-md-6">
-                    <img src="images/icons/icon-cont-1.svg" alt="">
-                    <div class="text-wrapper">
-                        <p><b>Адрес:</b></p>
-                        <p>Долгопрудный, пер. Институтский 5 корпус 2</p>
+            <!-- Begin Section 1 -->
+            <section class="section-1 container">
+                <div class="row">
+                    <div class="col-sm-8 col-sm-push-4 ">
+                        <div class="block-404">
+                            <div class="img">404</div>
+                            <div class="description">
+                                <div class="title-section">Ошибка 404</div>
+                                <div class="note">К сожалению, страница, которую Вы запросили, не найдена.</div>
+                                <div class="style-text-5">
+                                    Вы можете вернуться в <a href="#">Каталог</a> или на <a href="#">Главную страницу</a>
+                                    или воспользоваться поиском
+                                </div>
+                            </div>
+                        </div>
+
+                        <form class="form-search" action="#">
+                            <input type="text" placeholder="Поиск">
+                            <button class="el-btn blue-style" type="submit">Найти</button>
+                        </form>
+                    </div>
+                    <div class="col-sm-4 col-sm-pull-8">
+                        <div class="catalog-list">
+                            <ul>
+                                <li class="title"><a href="#">Каталог</a></li>
+                                <li><a href="#">Бизнес</a></li>
+                                <li><a href="#">ИТ</a></li>
+                                <li><a href="#">Физика</a></li>
+                                <li><a href="#">Математика</a></li>
+                                <li><a href="#">Экономика</a></li>
+                                <li><a href="#">Астрономия</a></li>
+                                <li><a href="#">ДПО</a></li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
-                <div class="col-md-6">
-                    <img src="images/icons/icon-cont-2.svg" alt="">
-                    <div class="text-wrapper">
-                        <p><b>Служба поддержки:</b></p>
-                        <p>Напишите нам</p>
-                    </div>
-                </div>
-                <div class="col-md-6">
-                    <img src="images/icons/icon-cont-3.svg" alt="">
-                    <div class="text-wrapper">
-                        <p><b>Телефон:</b></p>
-                        <p><a href="tel:+7 (902) 245-63-28">+7 (902) 245-63-28</a></p>
-                    </div>
-                </div>
-                <div class="col-md-6">
-                    <img src="images/icons/icon-cont-4.svg" alt="">
-                    <div class="text-wrapper">
-                        <p><b>Контакты для прессы:</b></p>
-                        <p><a href="tel:+7 (902) 245-63-28">+7 (902) 245-63-28</a></p>
-                    </div>
-                </div>
-            </div>
-        </section>
+            </section>
+            <!-- End Section 1 -->
 
-        <script src="http://api-maps.yandex.ru/2.0/?load=package.full&lang=ru-RU" type="text/javascript"></script>
-        <script>
-            var addresses = [
-                'Москва, ул. Льва Толстого, 16',
-                'Москва, ул. Лапина, 3',
-                '55.767257,37.613343'
-            ];
-
-            ymaps.ready(init);
-
-            function init() {
-
-                var map = new ymaps.Map('map', {
-                    center: [55.76, 37.64],
-                    zoom: 11,
-                    behaviors: ['default', 'scrollZoom'],
-                    controls: ['mapTools']
-                });
-
-                function addLabel(map, addr) {
-                    var geocoder = new ymaps.geocode(addr, {results: 1});
-                    geocoder.then(function (res) {
-                        var gob = res.geoObjects.get(0);
-                        gob.properties.set('iconContent', "Название");
-                        gob.options.set('preset', "twirl#blueDotIcon");
-                        gob.options.set('balloonContentHeader', "test");
-                        map.geoObjects.add(gob);
-                    });
-                }
-
-                for (var i = 0; i < addresses.length; ++i) {
-                    addLabel(map, addresses[i]);
-                }
-            }
-        </script>
-        <div id="map" class="map-wrap"></div>
-
+        </div>
     </div>
 
 <footer id="footer" class="wrapper footer">
