--- a/404.html
+++ b/404.html
@@ -5,7 +5,7 @@
   <title>Title</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,700,600&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" href="css/style.css?timestamp=1472907548049"/>
+  <link rel="stylesheet" href="css/style.css?timestamp=1472992037195"/>
   <script src="js/ie-detector.js"></script>
   <script src="js/modernizr.js"></script>
   <!--[if lte IE 9]><meta http-equiv="X-UA-Compatible" content="IE=edge"/><![endif]-->
@@ -68,9 +68,7 @@
 
     <div id="page-body" class="page-body not-found-page">
         <div class="page-content">
-
-            <!-- Begin Section 1 -->
-            <section class="section-1 container">
+            <div class="container">
                 <div class="row">
                     <div class="col-sm-8 col-sm-push-4 ">
                         <div class="block-404">
@@ -105,9 +103,7 @@
                         </div>
                     </div>
                 </div>
-            </section>
-            <!-- End Section 1 -->
-
+            </div>
         </div>
     </div>
 
@@ -191,7 +187,7 @@
 <!-- scripts -->
 <script src="js/libs.js"></script>
 <script src="js/core.js"></script>
-<script src="js/common.js?timestamp=1472907548050"></script>
+<script src="js/common.js?timestamp=1472992037195"></script>
 <script src="//localhost:35729/livereload.js"></script>
 </body>
 </html>
