--- a/courses10-1.html
+++ b/courses10-1.html
@@ -5,7 +5,7 @@
   <title>Title</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,700,600&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" href="css/style.css?timestamp=1472907548049"/>
+  <link rel="stylesheet" href="css/style.css?timestamp=1472992037195"/>
   <script src="js/ie-detector.js"></script>
   <script src="js/modernizr.js"></script>
   <!--[if lte IE 9]><meta http-equiv="X-UA-Compatible" content="IE=edge"/><![endif]-->
@@ -136,11 +136,11 @@
                             <div class="title-section">Из учебного плана</div>
                             <section class="css-shadow skill-columns">
                                 <div class="row course-block">
-                                    <div class="col-md-3 col-lg-2 col-xs-3 text-center">
+                                    <div class="col-sm-3 col-lg-2 col-xs-12 text-center">
                                         <div class="img"><img src="images/courses/img-1.jpg" alt=""></div>
                                         <a href="#" class="partner-logo"><img src="images/courses/logo.jpg" alt=""></a>
                                     </div>
-                                    <div class="col-md-9 col-lg-10">
+                                    <div class="col-sm-9 col-lg-10 col-xs-12">
                                         <div class="inform-block">
 
                                             <div class="course-desc">
@@ -255,11 +255,11 @@
                             <!-- Begin section -->
                             <section class="css-shadow skill-columns hidden-columns">
                                 <div class="row course-block">
-                                    <div class="col-md-3 col-lg-2 col-xs-3 text-center">
+                                    <div class="col-sm-3 col-lg-2 col-xs-12 text-center">
                                         <div class="img"><img src="images/courses/img-2.jpg" alt=""></div>
                                         <a href="#" class="partner-logo"><img src="images/courses/logo.jpg" alt=""></a>
                                     </div>
-                                    <div class="col-md-9 col-lg-10">
+                                    <div class="col-sm-9 col-lg-10 col-xs-12">
                                         <div class="inform-block">
 
                                             <div class="course-desc">
@@ -410,7 +410,7 @@
 <!-- scripts -->
 <script src="js/libs.js"></script>
 <script src="js/core.js"></script>
-<script src="js/common.js?timestamp=1472907548050"></script>
+<script src="js/common.js?timestamp=1472992037195"></script>
 <script src="//localhost:35729/livereload.js"></script>
 </body>
 </html>
