personal style modified

--- a/personal.html
+++ b/personal.html
@@ -4,11 +4,7 @@
   <meta charset="utf-8"/>
   <title>Title</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-<<<<<<< HEAD
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
-=======
-  <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,700,600&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
->>>>>>> c687ce4d9b552f5a8f0a87cefaeb32a015ee2632
   <link rel="stylesheet" href="css/style.min.css"/>
   <script src="js/ie-detector.js"></script>
   <script src="js/modernizr.js"></script>
@@ -102,19 +98,19 @@
                                     </div>
                                 </div>
                                 <div class="row">
-                                    <div class="col-sm-6">
+                                    <div class="col-sm-7">
                                         <div class="wrap-img">
                                             <img src="images/img-persone.png" alt="img-persone">
                                         </div>
                                         <div class="wrap-info">
-                                            <div class="bal">351 балл</div>
+                                            <div class="bal">351 балл опыта</div>
                                             <p class="small">Средний балл  65 из 100</p>
                                             <div class="sertificat">
                                                 <img src="images/medal.svg" alt=""> Получен <b>1</b> сертификат!
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="col-sm-6">
+                                    <div class="col-sm-5 profile-arrow">
                                         <p>Профессия</p>
                                         <div class="title">Junior Data Analyst</div>
                                         <span class="el-progress-wrap all-progress">
@@ -230,7 +226,7 @@
                                         <div class="right-competence">
                                             <div class="title">
                                                 8 из 15 <span>компетенций</span>
-                                                <button class="js-toggle-close"><img src="images/icons/arrow-up-icon.svg" alt=""></button>
+                                                <button class="js-toggle-close"><i class="icon-angle-up"></i></button>
                                             </div>
                                             <div id="scroll-wrap1" class="scroll-wrap">
                                                 <ul class="list-competence">
@@ -274,7 +270,7 @@
                                                     <span class="name">Программирование</span>
                                                     <ul class="skill-nav">
                                                         <li><span>идет обучение</span></li>
-                                                        <li><a href="#"><img src="images/icons/info-icon.svg" alt=""></a></li>
+                                                        <li><a href="#"><img src="images/icons/info-icon-white.svg" alt=""></a></li>
                                                         <li><a href="#" class="js-toggle-menu"><i class="icon-angle-down"></i></a></li>
                                                     </ul>
                                                     <span class="el-progress-wrap">
@@ -288,7 +284,7 @@
                                                     <span class="name">Maschine Learning</span>
                                                     <ul class="skill-nav">
                                                         <li><span>идет обучение</span></li>
-                                                        <li><a href="#"><img src="images/icons/info-icon.svg" alt=""></a></li>
+                                                        <li><a href="#"><img src="images/icons/info-icon-white.svg" alt=""></a></li>
                                                         <li><a href="#" class="js-toggle-menu"><i class="icon-angle-down"></i></a></li>
                                                     </ul>
                                                     <span class="el-progress-wrap">
@@ -303,7 +299,7 @@
                                                     <span class="name">Анализ Big Data</span>
                                                     <ul class="skill-nav">
                                                         <li><span>идет обучение</span></li>
-                                                        <li><a href="#"><img src="images/icons/info-icon.svg" alt=""></a></li>
+                                                        <li><a href="#"><img src="images/icons/info-icon-white.svg" alt=""></a></li>
                                                         <li><a href="#" class="js-toggle-menu"><i class="icon-angle-down"></i></a></li>
                                                     </ul>
                                                     <span class="el-progress-wrap">
@@ -317,7 +313,7 @@
                                                     <span class="name">Микробиом пресных водоемов</span>
                                                     <ul class="skill-nav">
                                                         <li><span>идет обучение</span></li>
-                                                        <li><a href="#"><img src="images/icons/info-icon.svg" alt=""></a></li>
+                                                        <li><a href="#"><img src="images/icons/info-icon-white.svg" alt=""></a></li>
                                                         <li><a href="#" class="js-toggle-menu"><i class="icon-angle-down"></i></a></li>
                                                     </ul>
                                                     <span class="el-progress-wrap">
@@ -338,7 +334,7 @@
                                                     <span class="name">Анализ Big Data</span>
                                                     <ul class="skill-nav">
                                                         <li><span>идет обучение</span></li>
-                                                        <li><a href="#"><img src="images/icons/info-icon.svg" alt=""></a></li>
+                                                        <li><a href="#"><img src="images/icons/info-icon-white.svg" alt=""></a></li>
                                                         <li><a href="#" class="js-toggle-menu"><i class="icon-angle-down"></i></a></li>
                                                     </ul>
                                                     <span class="el-progress-wrap">
@@ -352,7 +348,7 @@
                                                     <span class="name">Микробиом пресных водоемов</span>
                                                     <ul class="skill-nav">
                                                         <li><span>идет обучение</span></li>
-                                                        <li><a href="#"><img src="images/icons/info-icon.svg" alt=""></a></li>
+                                                        <li><a href="#"><img src="images/icons/info-icon-white.svg" alt=""></a></li>
                                                         <li><a href="#" class="js-toggle-menu"><i class="icon-angle-down"></i></a></li>
                                                     </ul>
                                                     <span class="el-progress-wrap">
@@ -369,7 +365,7 @@
                                         <div class="right-competence">
                                             <div class="title">
                                                 8 из 15 <span>компетенций</span>
-                                                <button class="js-toggle-close"><img src="images/icons/arrow-up-icon.svg" alt=""></button>
+                                                <button class="js-toggle-close"><i class="icon-angle-up"></i></button>
                                             </div>
                                             <div id="scroll-wrap" class="scroll-wrap">
                                                 <ul class="list-competence">
