--- a/profession.html
+++ b/profession.html
@@ -4,11 +4,7 @@
   <meta charset="utf-8"/>
   <title>Title</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-<<<<<<< HEAD
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
-=======
-  <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,700,600&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
->>>>>>> c687ce4d9b552f5a8f0a87cefaeb32a015ee2632
   <link rel="stylesheet" href="css/style.min.css"/>
   <script src="js/ie-detector.js"></script>
   <script src="js/modernizr.js"></script>
@@ -217,7 +213,7 @@
                                                 <span class="name">Программирование</span>
                                                 <ul class="skill-nav">
                                                     <li><span>идет обучение</span></li>
-                                                    <li><a href="#"><img src="images/icons/info-icon.svg" alt=""></a></li>
+                                                    <li><a href="#"><img src="images/icons/info-icon-white.svg" alt=""></a></li>
                                                     <li><a href="#" class="js-toggle-menu"><i class="icon-angle-down"></i></a></li>
                                                 </ul>
                                                 <span class="el-progress-wrap">
@@ -231,7 +227,7 @@
                                                 <span class="name">Maschine Learning</span>
                                                 <ul class="skill-nav">
                                                     <li><span>идет обучение</span></li>
-                                                    <li><a href="#"><img src="images/icons/info-icon.svg" alt=""></a></li>
+                                                    <li><a href="#"><img src="images/icons/info-icon-white.svg" alt=""></a></li>
                                                     <li><a href="#" class="js-toggle-menu"><i class="icon-angle-down"></i></a></li>
                                                 </ul>
                                                 <span class="el-progress-wrap">
@@ -246,7 +242,7 @@
                                                 <span class="name">Анализ Big Data</span>
                                                 <ul class="skill-nav">
                                                     <li><span>идет обучение</span></li>
-                                                    <li><a href="#"><img src="images/icons/info-icon.svg" alt=""></a></li>
+                                                    <li><a href="#"><img src="images/icons/info-icon-white.svg" alt=""></a></li>
                                                     <li><a href="#" class="js-toggle-menu"><i class="icon-angle-down"></i></a></li>
                                                 </ul>
                                                 <span class="el-progress-wrap">
@@ -260,7 +256,7 @@
                                                 <span class="name">Микробиом пресных водоемов</span>
                                                 <ul class="skill-nav">
                                                     <li><span>идет обучение</span></li>
-                                                    <li><a href="#"><img src="images/icons/info-icon.svg" alt=""></a></li>
+                                                    <li><a href="#"><img src="images/icons/info-icon-white.svg" alt=""></a></li>
                                                     <li><a href="#" class="js-toggle-menu"><i class="icon-angle-down"></i></a></li>
                                                 </ul>
                                                 <span class="el-progress-wrap">
@@ -281,7 +277,7 @@
                                                 <span class="name">Анализ Big Data</span>
                                                 <ul class="skill-nav">
                                                     <li><span>идет обучение</span></li>
-                                                    <li><a href="#"><img src="images/icons/info-icon.svg" alt=""></a></li>
+                                                    <li><a href="#"><img src="images/icons/info-icon-white.svg" alt=""></a></li>
                                                     <li><a href="#" class="js-toggle-menu"><i class="icon-angle-down"></i></a></li>
                                                 </ul>
                                                 <span class="el-progress-wrap">
@@ -295,7 +291,7 @@
                                                 <span class="name">Микробиом пресных водоемов</span>
                                                 <ul class="skill-nav">
                                                     <li><span>идет обучение</span></li>
-                                                    <li><a href="#"><img src="images/icons/info-icon.svg" alt=""></a></li>
+                                                    <li><a href="#"><img src="images/icons/info-icon-white.svg" alt=""></a></li>
                                                     <li><a href="#" class="js-toggle-menu"><i class="icon-angle-down"></i></a></li>
                                                 </ul>
                                                 <span class="el-progress-wrap">
@@ -312,7 +308,7 @@
                                     <div class="right-competence">
                                         <div class="title">
                                             8 из 15 <span>компетенций</span>
-                                            <button class="js-toggle-close"><img src="images/icons/arrow-up-icon.svg" alt=""></button>
+                                            <button class="js-toggle-close"><i class="icon-angle-up"></i></button>
                                         </div>
                                         <div id="scroll-wrap" class="scroll-wrap">
                                             <ul class="list-competence">
